--- a/lenmash/css/style7.css
+++ b/lenmash/css/style7.css
@@ -131,3 +131,13 @@ a {
   display: -webkit-box;
   -webkit-box-orient: vertical;
 }
+
+.gla_button{
+  position: absolute;
+  width: 300px;
+  height: 102px;
+  top: 48px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
