--- a/lenmash/css/style4.css
+++ b/lenmash/css/style4.css
@@ -210,3 +210,12 @@
   width: 252px;
   height: 72px;
 }
+
+.gla_button{
+  position: absolute;
+  width: 300px;
+  height: 102px;
+  top: 48px;
+  object-fit: cover;
+  cursor: pointer;
+}
